[gd_scene load_steps=10 format=3 uid="uid://cbx00ultrj0mj"]

[ext_resource type="Script" path="res://scenes/dialog_box/dialog_box.gd" id="1_bgr2h"]
[ext_resource type="Texture2D" uid="uid://vlfabdnmckmb" path="res://icon.svg" id="1_ueym1"]
[ext_resource type="FontFile" uid="uid://b0uqyb5ociqt5" path="res://scenes/ui/Neucha-Regular.ttf" id="2_es8ge"]
[ext_resource type="Texture2D" uid="uid://cnvkqmtepba5v" path="res://portraits/grandfather_speaking.png" id="2_wpnwx"]
[ext_resource type="Texture2D" uid="uid://cnhfl4m3fgc5s" path="res://portraits/girl_normal.png" id="3_70q3p"]

[sub_resource type="Theme" id="Theme_ad8wc"]

[sub_resource type="Animation" id="Animation_1nfrg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(555, 82)]
}

[sub_resource type="Animation" id="Animation_x034s"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(555, 60), Vector2(555, 90), Vector2(555, 60)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_coyqm"]
_data = {
"RESET": SubResource("Animation_1nfrg"),
"float": SubResource("Animation_x034s")
}

[node name="DialogBox" type="ColorRect" groups=["dialog_box"]]
offset_left = 147.0
offset_top = 738.0
offset_right = 1717.0
offset_bottom = 1030.0
pivot_offset = Vector2(-147, -740)
theme = SubResource("Theme_ad8wc")
color = Color(0.894118, 0.576471, 0.376471, 1)
script = ExtResource("1_bgr2h")
dialog_path = "res://dialogs/dialog_ducks.json"

[node name="Name" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 56.0
offset_top = 23.0
offset_right = 1548.0
offset_bottom = 79.0
theme_override_colors/default_color = Color(0, 0, 0.686275, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("2_es8ge")
theme_override_font_sizes/normal_font_size = 49
bbcode_enabled = true
text = "Собеседник"

[node name="Text" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 16.0
offset_top = 92.0
offset_right = 1537.0
offset_bottom = 255.0
theme_override_fonts/normal_font = ExtResource("2_es8ge")
theme_override_fonts/bold_font = ExtResource("2_es8ge")
theme_override_fonts/italics_font = ExtResource("2_es8ge")
theme_override_fonts/bold_italics_font = ExtResource("2_es8ge")
theme_override_fonts/mono_font = ExtResource("2_es8ge")
theme_override_font_sizes/normal_font_size = 52
theme_override_font_sizes/bold_font_size = 60
theme_override_font_sizes/italics_font_size = 52
theme_override_font_sizes/bold_italics_font_size = 60
theme_override_font_sizes/mono_font_size = 52
bbcode_enabled = true
text = "Длинная реплика со всякими [wave]прикольными штуками[/wave]."

[node name="Indicator" type="Polygon2D" parent="."]
position = Vector2(555, 82)
color = Color(0.729412, 0.560784, 1, 1)
polygon = PackedVector2Array(823, 101, 915, 98, 871, 168)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Indicator"]
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_coyqm")
}

[node name="PortraitLeft" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(378, -187)
texture = ExtResource("2_wpnwx")

[node name="PortraitRight" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1294, -188)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_70q3p")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EndPhraseTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ErrorSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(761, -41)
texture = ExtResource("1_ueym1")
